--- a/index.html
+++ b/index.html
@@ -1,89 +1,92 @@
 <!DOCTYPE html>
-
-<html lang="en-us">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About | Sam Rodriguez</title>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>About Sam Rodriguez</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Sam Rodriguez</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-            </ul>
-        </div>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light">
+        <div class="col-sm-2"></div>
+        <h2 id="head" class="col-sm-2">Sam Rodriguez</h2>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-2">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+            </div>
+            <div class="col-sm-2"></div>
     </nav>
 
+    <!--About Me-->
     <div class="container">
-
         <div class="row">
-            <div class="col-md-8 main-section">
-                <h1>About Me</h1>
-                <div class="row">
-                    <img class="pull-left img-responsive" id="profile-photo" src="assets/images/Sam.jpeg"
-                        alt="Sam Rodriguez profile photo">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="title"> About Me</h2>
+                        <hr>
+                        <img class="photo" src="assets/SamProfile2.JPG" alt="Sam Rodriguez profile picture">
+                        <p>Sam is a Product Development Director with full-stack web development skills and
+                            entrepreneurial
+                            ambitions. During his 10 plus years in the Government and Nonprofit industry, he has worked
+                            in multi-level relations management, led many product development projects from begining to
+                            end, and has experience writing technical documentation.</p>
 
-                    <p>Sam is a Product Development Director with full-stack web development skills and entrepreneurial
-                        ambitions. During his 10 plus years in the Government and Nonprofit industry, he has worked in multi-level relations management, product development projects from begining to end, and technical documentation.</p>
-
-                    <p>Sam has a pilot's license, as well as an instrument ground instructor certificate, and enjoys
-                        sightseeing, taking aerial photographs, and writing trip reports.</p>
-
-                    <p>He holds a Bachelor of Science in Mechanical Ingeneering from San Jose State University and a Certificate of Business Administration from Darden School of Business. In February 2021, he will be completing an immersive, certificate full-stack web development bootcamp from the University of Washington.</p>
+                        <p>He holds a Bachelor of Science in Mechanical Ingeneering from San Jose State University and a
+                            Certificate of Business Administration from Darden School of Business. In February 2021, he
+                            will be completing an immersive, certificate full-stack web development bootcamp from the
+                            University of Washington.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="col-md-3 col-md-offset-1 sidebar">
-                <h2>Connect with Me</h2>
-
-                <a href="https://github.com/samrod777"><img class="social img-responsive" src="assets/images/github.png"
-                        alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/samrod777"><img class="social img-responsive"
-                        src="assets/images/linkedin.png" alt="LinkedIn"></a>
-                <a href="https://stackexchange.com/users/512843/Sam"><img class="social img-responsive"
-                        src="assets/images/stackoverflow.png" alt="StackExchange"></a>
-            </div>
-        </div>
-
-    </div>
-
-    <!-- Make footer container fluid so it goes across the screen -->
-
-    <div class="container-fluid footer-section">
-        <div class="row">
-            <p>&copy; Copyright 2020 Sam Rodriguez</p>
+            <div class="col-sm-1"></div>
         </div>
     </div>
 
 
-    <!-- Scripts needed for Bootstrap collapsing navbar -->
+    <!-- Footer -->
+    <footer class="page-footer font-small blue fixed-bottom">
+        <div class="footer-copyright text-center py-3">
+            Copyright&nbsp;&copy Sam Rodriguez 2020
+        </div>
+    </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
 </body>
