--- a/portfolio.html
+++ b/portfolio.html
@@ -1,72 +1,124 @@
 <!DOCTYPE html>
-
-<html lang="en-us">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio | Sam Rodriguez</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>02-Portfolio</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Sam Rodriguez</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-            </ul>
-        </div>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light">
+        <div class="col-sm-2"></div>
+        <h2 id="head" class="col-sm-2">Sam Rodriguez</h2>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-2">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+            </div>
+            <div class="col-sm-2"></div>
     </nav>
 
+    <!--Portfolio-->
     <div class="container">
-
-      
-
-
-        <div class="col-md-3 col-md-offset-1 sidebar">
-            <h2>Connect with Me</h2>
-
-            <a href="https://github.com/samrod777"><img class="social img-responsive" src="assets/images/github.png"
-                    alt="GitHub"></a>
-            <a href="https://www.linkedin.com/in/samrod777"><img class="social img-responsive"
-                    src="assets/images/linkedin.png" alt="LinkedIn"></a>
-            <a href="https://stackexchange.com/users/512843/Sam"><img class="social img-responsive"
-                    src="assets/images/stackoverflow.png" alt="StackExchange"></a>
-        </div>
-    </div>
-    </div>
-
-    <!-- Make footer container fluid so it goes across the screen -->
-
-    <div class="container-fluid footer-section">
         <div class="row">
-            <p>&copy; Copyright 2020 Sam Rodriguez</p>
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="title">Portfolio</h2>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="card border-0">
+                                    <a href="#">
+                                        <img class="card-img-top" src="assets/images/journal.jpeg" alt="">
+                                        <div class="stripe">
+                                            Project #1
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="card border-0">
+                                    <a href="#">
+                                        <img class="card-img-top" src="assets/images/files.jpeg" alt="">
+                                        <div class="stripe">
+                                            Homework Sample 1
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="card border-0">
+                                    <a href="#">
+                                        <img class="card-img-top" src="assets/images/iphones.jpeg" alt="">
+                                        <div class="stripe">
+                                            Homework Sample 2
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="card border-0">
+                                    <a href="#">
+                                        <img class="card-img-top" src="assets/images/business.jpeg" alt="">
+                                        <div class="stripe">
+                                            Homework Sample 3
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-1"></div>
         </div>
     </div>
 
-    <!-- Scripts needed for Bootstrap collapsing navbar -->
+    <!-- Footer -->
+    <footer class="page-footer font-small blue fixed-bottom">
+        <div class="footer-copyright text-center py-3">
+            Copyright&nbsp;&copy Sam Rodriguez 2020
+        </div>
+    </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
 </body>
