connect with me section added

--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
                             University of Washington.</p>
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="connect"> Connect with me</h2>
+                        <hr>
+                        <ul class="connectLinks">
+                            <ul class="connect-nav mr-auto">
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link" href="https://github.com/samrod777">Github: https://github.com/samrod777</a>
+                                </li>
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link" href="https://www.linkedin.com/in/sam-rodriguez-48481412">Linkedin: www.linkedin.com/in/sam-rodriguez-48481412
+                                </a>
+                                </li>
+                            </ul>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-1"></div>
         </div>
