minor corretions on html files

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>02-Contact</title>
+    <title>Contact</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -69,6 +69,26 @@
                             </div>
                             <button type="submit" class="btn btn-info col-sm-4">Submit</button>
                         </form>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="connect"> Connect with me</h2>
+                        <hr>
+                        <ul class="connectLinks">
+                            <ul class="connect-nav mr-auto">
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link" href="https://github.com/samrod777">Github:
+                                        https://github.com/samrod777</a>
+                                </li>
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link"
+                                        href="https://www.linkedin.com/in/sam-rodriguez-48481412">Linkedin:
+                                        www.linkedin.com/in/sam-rodriguez-48481412
+                                    </a>
+                                </li>
+                            </ul>
                     </div>
                 </div>
             </div>
