--- a/index.html
+++ b/index.html
@@ -53,31 +53,38 @@
                         <h2 class="title"> About Me</h2>
                         <hr>
                         <img class="photo" src="assets/SamProfile2.JPG" alt="Sam Rodriguez profile picture">
-                        <p>Sam is a Product Development Director with full-stack web development skills and
+                        <p>Hi, my name is Sam Rodriguez, I am currently the Product Development Director at Lightouse
+                            for the Blind, Inc. I also have full-stack web development skills and
                             entrepreneurial
-                            ambitions. During his 10 plus years in the Government and Nonprofit industry, he has worked
+                            ambitions. During my 10 plus years in the Government and Nonprofit industry, I have worked
                             in multi-level relations management, led many product development projects from begining to
-                            end, and has experience writing technical documentation.</p>
+                            end, and posses experience writing technical documentation.</p>
 
-                        <p>He holds a Bachelor of Science in Mechanical Ingeneering from San Jose State University and a
-                            Certificate of Business Administration from Darden School of Business. In February 2021, he
+                        <p>I earned a Bachelor of Science in Mechanical Ingeneering from San Jose State University and a
+                            Certificate of Business Administration from Darden School of Business. In February 2021, I
                             will be completing an immersive, certificate full-stack web development bootcamp from the
                             University of Washington.</p>
+
+                        <p>Take a look at some of the projects I have worked on so far. Files for each project can be
+                            found by clicking on the Github link below.</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-body">
-                        <h2 class="connect"> Connect with me</h2>
+                        <h2 class="connect"> See some of my work and connect with me</h2>
                         <hr>
                         <ul class="connectLinks">
                             <ul class="connect-nav mr-auto">
                                 <li class="connect-nav-item active">
-                                    <a class="nav-link" href="https://github.com/samrod777">Github: https://github.com/samrod777</a>
+                                    <a class="nav-link" href="https://github.com/samrod777">Github:
+                                        https://github.com/samrod777</a>
                                 </li>
                                 <li class="connect-nav-item active">
-                                    <a class="nav-link" href="https://www.linkedin.com/in/sam-rodriguez-48481412">Linkedin: www.linkedin.com/in/sam-rodriguez-48481412
-                                </a>
+                                    <a class="nav-link"
+                                        href="https://www.linkedin.com/in/sam-rodriguez-48481412">Linkedin:
+                                        www.linkedin.com/in/sam-rodriguez-48481412
+                                    </a>
                                 </li>
                             </ul>
                     </div>
