--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>02-Portfolio</title>
+    <title>Portfolio</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -55,8 +55,8 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="#">
-                                        <img class="card-img-top" src="assets/images/journal.jpeg" alt="">
+                                    <a href="https://samrod777.github.io/Recipe-List-Platform">
+                                        <img class="card-img-top" src="assets/Project1.png" alt="Screenshot of project #1, it shows a martini with ingredients and instructions on how to make it">
                                         <div class="stripe">
                                             Project #1
                                         </div>
@@ -65,8 +65,8 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="#">
-                                        <img class="card-img-top" src="assets/images/files.jpeg" alt="">
+                                    <a href="https://samrod777.github.io/Weather-Dashboard-HW6">
+                                        <img class="card-img-top" src="assets/weather-dashboard.png" alt="Screenshot of Weather dashboard app">
                                         <div class="stripe">
                                             Homework Sample 1
                                         </div>
@@ -78,8 +78,8 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="#">
-                                        <img class="card-img-top" src="assets/images/iphones.jpeg" alt="">
+                                    <a href="https://samrod777.github.io/Work-Day-Scheduler-HW5/">
+                                        <img class="card-img-top" src="assets/Day-scheduler.png" alt="Screenshot of the Day Scheduler app">
                                         <div class="stripe">
                                             Homework Sample 2
                                         </div>
@@ -88,8 +88,8 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="#">
-                                        <img class="card-img-top" src="assets/images/business.jpeg" alt="">
+                                    <a href="https://samrod777.github.io/Password-Generator-HW3">
+                                        <img class="card-img-top" src="./assets/Password-generator.png" alt="Screenshot of the password generator app">
                                         <div class="stripe">
                                             Homework Sample 3
                                         </div>
@@ -97,6 +97,26 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="connect"> Connect with me</h2>
+                        <hr>
+                        <ul class="connectLinks">
+                            <ul class="connect-nav mr-auto">
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link" href="https://github.com/samrod777">Github:
+                                        https://github.com/samrod777</a>
+                                </li>
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link"
+                                        href="https://www.linkedin.com/in/sam-rodriguez-48481412">Linkedin:
+                                        www.linkedin.com/in/sam-rodriguez-48481412
+                                    </a>
+                                </li>
+                            </ul>
                     </div>
                 </div>
             </div>
