--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                                     <a href="https://samrod777.github.io/Recipe-List-Platform">
                                         <img class="card-img-top" src="assets/Project1.png" alt="Screenshot of project #1, it shows a martini with ingredients and instructions on how to make it">
                                         <div class="stripe">
-                                            Project #1
+                                            Food & Drinks Recipes
                                         </div>
                                     </a>
                                 </div>
@@ -68,7 +68,7 @@
                                     <a href="https://samrod777.github.io/Weather-Dashboard-HW6">
                                         <img class="card-img-top" src="assets/weather-dashboard.png" alt="Screenshot of Weather dashboard app">
                                         <div class="stripe">
-                                            Homework Sample 1
+                                            Wheather dashboard
                                         </div>
                                     </a>
                                 </div>
@@ -81,7 +81,7 @@
                                     <a href="https://samrod777.github.io/Work-Day-Scheduler-HW5/">
                                         <img class="card-img-top" src="assets/Day-scheduler.png" alt="Screenshot of the Day Scheduler app">
                                         <div class="stripe">
-                                            Homework Sample 2
+                                            Workday Scheduler
                                         </div>
                                     </a>
                                 </div>
@@ -91,7 +91,7 @@
                                     <a href="https://samrod777.github.io/Password-Generator-HW3">
                                         <img class="card-img-top" src="./assets/Password-generator.png" alt="Screenshot of the password generator app">
                                         <div class="stripe">
-                                            Homework Sample 3
+                                            Password Generator
                                         </div>
                                     </a>
                                 </div>
