updated portfolio banners

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,10 +88,10 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="https://samrod777.github.io/Password-Generator-HW3">
-                                        <img class="card-img-top" src="./assets/Password-generator.png" alt="Screenshot of the password generator app">
+                                    <a href="https://fathomless-retreat-85881.herokuapp.com/">
+                                        <img class="card-img-top" src="./assets/Eat-da-burger-screenshot.png" alt="Screenshot of the Eat-da-burger app">
                                         <div class="stripe">
-                                            Password Generator
+                                            Eat Da Burger!
                                         </div>
                                     </a>
                                 </div>
