--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                         <h2 class="title"> About Me</h2>
                         <hr>
                         <img class="photo" src="assets/SamProfile2.JPG" alt="Sam Rodriguez profile picture">
-                        <p>Hi, my name is Sam Rodriguez, I am currently the Product Development Director at Lightouse
+                        <p>Hi, my name is Sam Rodriguez, I am currently the Product Development Director at Lighthouse
                             for the Blind, Inc. I also have full-stack web development skills and
                             entrepreneurial
                             ambitions. During my 10 plus years in the Government and Nonprofit industry, I have worked
-                            in multi-level relations management, led many product development projects from begining to
+                            in multi-level relations management, led many product development projects from beginning to
                             end, and posses experience writing technical documentation.</p>
 
-                        <p>I earned a Bachelor of Science in Mechanical Ingeneering from San Jose State University and a
+                        <p>I earned a Bachelor of Science in Mechanical Engineering from San Jose State University and a
                             Certificate of Business Administration from Darden School of Business. In February 2021, I
-                            will be completing an immersive, certificate full-stack web development bootcamp from the
+                            completed an immersive, certificate full-stack web development Bootcamp from the
                             University of Washington.</p>
 
                         <p>Take a look at some of the projects I have worked on so far. Files for each project can be
