added email address

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                                         www.linkedin.com/in/sam-rodriguez-Dev
                                     </a>
                                 </li>
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link"
+                                        href="#">Email:
+                                        samrodriguezdev@gmail.com
+                                    </a>
+                                </li>
                             </ul>
                     </div>
                 </div>
