added email to all pages

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
-                <div class="card">
+                <!-- <div class="card">
                     <div class="card-body">
                         <form>
                             <h2 class="title">Contact</h2>
@@ -70,7 +70,7 @@
                             <button type="submit" class="btn btn-info col-sm-4">Submit</button>
                         </form>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <div class="card-body">
@@ -86,6 +86,12 @@
                                     <a class="nav-link"
                                         href="https://www.linkedin.com/in/sam-rodriguez-Dev">Linkedin:
                                         www.linkedin.com/in/sam-rodriguez-Dev
+                                    </a>
+                                </li>
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link"
+                                        href="#">Email:
+                                        samrodriguezdev@gmail.com
                                     </a>
                                 </li>
                             </ul>
