minor spelling fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                                     <a href="https://samrod777.github.io/Weather-Dashboard-HW6">
                                         <img class="card-img-top" src="assets/weather-dashboard.png" alt="Screenshot of Weather dashboard app">
                                         <div class="stripe">
-                                            Wheather dashboard
+                                            Weather dashboard
                                         </div>
                                     </a>
                                 </div>
@@ -115,7 +115,7 @@
                                 <li class="connect-nav-item active">
                                     <a class="nav-link"
                                         href="https://www.linkedin.com/in/sam-rodriguez-Dev">Linkedin:
-                                        www.linkedin.com/in/sam-rodriguez-Dev
+                                        www.linkedIn.com/in/sam-rodriguez-Dev
                                     </a>
                                 </li>
                                 <li class="connect-nav-item active">
