added resume link to contact page

--- a/contact.html
+++ b/contact.html
@@ -85,13 +85,19 @@
                                 <li class="connect-nav-item active">
                                     <a class="nav-link"
                                         href="https://www.linkedin.com/in/sam-rodriguez-Dev">Linkedin:
-                                        www.linkedin.com/in/sam-rodriguez-Dev
+                                        www.linkedIn.com/in/sam-rodriguez-Dev
                                     </a>
                                 </li>
                                 <li class="connect-nav-item active">
                                     <a class="nav-link"
                                         href="#">Email:
                                         samrodriguezdev@gmail.com
+                                    </a>
+                                </li>
+                                <li class="connect-nav-item active">
+                                    <a class="nav-link"
+                                        href="https://drive.google.com/file/d/1kUtsusidRtHpWiTgs2WmBQ0IXJMHDm7O/view?usp=sharing">Resume:
+                                        Sam Rodriguez
                                     </a>
                                 </li>
                             </ul>
