added repo link

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,10 +55,11 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="https://samrod777.github.io/Recipe-List-Platform">
+                                    
                                         <img class="card-img-top" src="assets/Project1.png" alt="Screenshot of project #1, it shows a martini with ingredients and instructions on how to make it">
-                                        <div class="stripe">
-                                            Food & Drinks Recipes
+                                        <div class="stripe"><a href="https://samrod777.github.io/Recipe-List-Platform" class="button">
+                                            Cocktail Picker App</a>
+                                           <div class="repo"> <a href="https://github.com/samrod777/Recipe-List-Platform" class="button">  Cocktail Picker Repo</a></div>
                                         </div>
                                     </a>
                                 </div>
@@ -69,7 +70,7 @@
                                     <a href="https://samrod777.github.io/Weather-Dashboard-HW6">
                                         <img class="card-img-top" src="assets/weather-dashboard.png" alt="Screenshot of Weather dashboard app">
                                         <div class="stripe">
-                                            Weather dashboard
+                                            Go to Weather Dashboard App
                                         </div>
                                     </a>
                                 </div>
