added repo links

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                             completed an immersive, certificate full-stack web development Bootcamp from the
                             University of Washington.</p>
 
-                        <p>Take a look at some of the projects I have worked on so far. Files for each project can be
-                            found by clicking on the Github link below.</p>
+                        <p>Take a look at some of the projects I have worked on so far in the portfolio page. Files for each project can be
+                            found by clicking on the project's repo link.</p>
                     </div>
                 </div>
 
