--- a/portfolio.html
+++ b/portfolio.html
@@ -81,26 +81,30 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="https://samrod777.github.io/Work-Day-Scheduler-HW5/">
-                                        <img class="card-img-top" src="assets/Day-scheduler.png" alt="Screenshot of the Day Scheduler app">
-                                        <div class="stripe">
-                                            Workday Scheduler
+                                    <img class="card-img-top" src="assets/Day-scheduler.png" alt="Screenshot of the Day Scheduler app">
+                                        <div class="stripe"><a href="https://samrod777.github.io/Work-Day-Scheduler" class="button">
+                                            Work Day Scheduler App</a>
+                                            <div class="repo"> 
+                                                <a href="https://github.com/samrod777/Work-Day-Scheduler" class="button">  Work Day Scheduler Repo</a>
+                                            </div>
                                         </div>
-                                    </a>
                                 </div>
                             </div>
 
                             <div class="col-sm-6">
                                 <div class="card border-0">
-                                    <a href="https://fathomless-retreat-85881.herokuapp.com/">
-                                        <img class="card-img-top" src="./assets/Eat-da-burger-screenshot.png" alt="Screenshot of the Eat-da-burger app">
-                                        <div class="stripe">
-                                            Eat Da Burger!
+                                    <img class="card-img-top" src="./assets/Eat-da-burger-screenshot.png" alt="Screenshot of the Eat-da-burger app">
+                                        <div class="stripe"><a href="https://fathomless-retreat-85881.herokuapp.com/" class="button">
+                                            Eat Da Burger App</a>
+                                            <div class="repo"> 
+                                                <a href="https://github.com/samrod777/Burger" class="button">  Eat Da Burger Repo</a>
+                                            </div>
                                         </div>
-                                    </a>
                                 </div>
                             </div>
                         </div>
+
+                        
                     </div>
                 </div>
 
